video recording added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
         <div class="call-wrap card" style="z-index: 99;">
             <video id="local-video" autoplay></video>
             <div class="row remote-video-wrap" style="position: relative;">
-                <div class="call-hang-status">
-
-                </div>
+                <div class="call-hang-status"></div>
                 <video id="remote-video" autoplay></video>
+            </div>
+            <div class="record-action">
+                <button id="start-recording" class="btn btn-small waves-effect red" disabled>Start Recording</button>
+                <button id="download-video" class="btn btn-small waves-effect teal" disabled>Download video</button>
             </div>
             <div class="row">
                 <div class="col m12">
